# pyautogui-next

./: .dockerignore  .gitignore  Dockerfile.linux-test  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.github/: change_version.py
.github/workflows/: publish-dev.yml  publish-main.yml  publish.yml  test.yml
docs/: conf.py  simplified-chinese.ipynb
pyautogui/: __init__.py  _pyautogui_osx.py  _pyautogui_win.py  _pyautogui_x11.py
tests/: Dockerfile.linux-test  gui_test_app.py  test_common.py  test_gui.py  test_gui_app_integration.py  test_metadata.py  test_pyautogui.py  test_unit.py
tests/gui_test_app/: Dockerfile  docker-entrypoint.sh  pyproject.toml
tests/gui_test_app/src/gui_test_app/: __init__.py  app.py
