[build-system]
requires = ["setuptools>=69.5.0,<80.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyautogui-next"
authors = [{ name = "Al Sweigart", email = "al@inventwithpython.com" }]
dynamic = ["version"]
description = "PyAutoGUI lets Python control the mouse and keyboard, and other GUI automation tasks on Windows, macOS, and Linux."
readme = { file = "README.md", content-type = "text/markdown" }
license = "BSD-3-Clause"
keywords = ["gui", "automation", "test", "testing", "keyboard", "mouse", "cursor", "click", "press", "keystroke", "control"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    'pyobjc-core; platform_system == "Darwin"',
    'pyobjc-framework-quartz; platform_system == "Darwin"',
    'python-Xlib>=0.16; platform_system == "Linux"',
    'pymsgbox',
    'pytweening>=1.0.4',
    'pyscreeze>=0.1.21',
    'pygetwindow>=0.0.5',
    'mouseinfo',
]

[project.optional-dependencies]
x11 = [
    'python-Xlib>=0.16',
]

[dependency-groups]
dev = [
    "pillow",
    "pytest",
    "pytest-cov",
    "pytest-socket",
    "ruff",
    "twine",
]

[project.urls]
Homepage = "https://github.com/fopina/pyautogui-next"
Repository = "https://github.com/fopina/pyautogui-next"
Documentation = "https://pyautogui.readthedocs.org"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pyautogui*"]

[tool.setuptools.dynamic]
version = { attr = "pyautogui.__version__" }

[tool.ruff]
line-length = 120
indent-width = 4

target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"docs/*.ipynb" = ["F821"]
"pyautogui/*.py" = ["E721", "E722", "E711"]
"pyautogui/__init__.py" = ["E402"]
"tests/test_pyautogui.py" = ["E402"]
"tests/test_unit.py" = ["E402"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --disable-socket"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["pyautogui"]

[tool.coverage.report]
show_missing = true
skip_covered = true
